--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="row d-flex justify-content-center py-5">
       <div class="col col-lg-8 col-xl-7">
         <!-- Task card app init -->
-        <app-todo-list></app-todo-list>
+        <app-task-card></app-task-card>
         <!-- Task card app end -->
       </div>
     </div>
