--- a/src/app/task/components/task-card/task-card.component.html
+++ b/src/app/task/components/task-card/task-card.component.html
@@ -1,13 +1,17 @@
 <div class="card rounded-3">
+ 
+  <span id="currentDateTime" class=" bg-danger nav-link text-white">
+    <span id="currentTime" style="font-size: 34px; font-weight: bold;">{{ currentTime }}</span> - <span id="currentDate" style="font-size: 20px; font-weight: bold;">{{ currentDate }}</span>
+  </span>  
+
   <div class="card-body p-4">
     <!-- Title -->
-    <app-task-header title="Clase de TEI" date="17/03/2005" course="matematica"></app-task-header>
+    <app-task-header title="Clase de TEI"></app-task-header>
     
     <!-- Input text -->
     <app-task-input (createTask)="addTask($event)"></app-task-input>
 
     <!-- Task list -->
-    <app-task-list [tasks]="taskList" (editTask)="updateTask($event)"
-    (removeTask)="deleteTask($event)"></app-task-list>
+    <app-task-list [tasks]="taskList" (editTask)="updateTask($event)" (removeTask)="deleteTask($event)"></app-task-list>
   </div>
 </div>
