--- a/src/app/task/components/task-header/task-header.component.html
+++ b/src/app/task/components/task-header/task-header.component.html
@@ -1,6 +1,13 @@
-
 <!-- Task Header -->
 <span class="fs-6">Lista de tareas</span>
 <p class="mb-2"><span class="h2 me-2">{{title}} </span>
 </p>
-<p class="text-muted pb-2">{{date}} • {{course}}</p>
+<p class="text-muted pb-2">{{date}} •
+    <select>
+        <option value="TEI" selected>Tecnologias de Internet</option>
+        <option value="POO">Programcion Orientada a Objetos</option>
+        <option value="BD">Base de Datos</option>
+        <option value="TP">Taller de Progrmacion</option>
+        <option value="TE">Telematica</option>
+    </select>
+</p>
