--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<section class="vh-100 bg-dark">
+<section class="vh-100 bg-success">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center py-5">
       <div class="col col-lg-8 col-xl-7">
         <!-- Task card app init -->
-        <app-todo-list></app-todo-list>
+        <router-outlet></router-outlet>
         <!-- Task card app end -->
       </div>
     </div>
