--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,6 +3,7 @@
 
         <!-- Title -->
         <span class="fs-6">Lista de tareas</span>
+        <button class="btn btn-primary" type="button" routerLink="/about">about</button>
         <p class="mb-2"><span class="h2 me-2">Acuerdos de equipo</span>
         </p>
         <p class="text-muted pb-2">04/01/2020 • AS221 - TEI</p>
